@@ -1,3 +1,4 @@
+* Remove LocalDict from tools
 * Add LRUDictTransaction
 * Follow PEP-0249 for Database, Transaction and Cursor
 * Add Python3 support
